# alise

./: .directory  CMakeLists.txt  Text File.txt  alise.kdev4  alise.service.in  aliseconstants.cpp  aliseconstants.h  aliseserver.cpp  aliseserver.h  alisesettings.cpp  alisesettings.h  avtukccu.h  blinker.cpp  blinker.h  broker.cpp  broker.h  cconfig.h.in  commandlineparser.cpp  commandlineparser.h  connectionthread.cpp  connectionthread.h  controller.cpp  controller.h  controllerfabric.cpp  controllerfabric.h  engine.cpp  engine.h  global.cpp  global.h  gpio.cpp  gpio.h  gpiobroker.cpp  gpiobroker.h  gpiobroker1.cpp  gpiohelper.c  gpiohelper.h  helper.h  httpapiserver.cpp  httpapiserver.h  httpmiddleware.cpp  (+24 more)
.kdev4/: alise.kdev4
avtuk-12/: eth0  eth1  postinst.in  prerm.in
booter/: settings.ini
cmake/: avm-gen.cmake  gen.cmake
conf/: alise.conf
deb-scripts/: conffiles  postinst.in  postrm.in  prerm.in
doc/: .~lock.обмен с Алисой.odg#  Alise Api.odt  AliseWorkflow.odg  readme.md  АВМР.426419.014 Д2. АВТУК. Модуль 14. Информационный обмен между STM32  и программой Alise ред. 1.1_.docx  Обновление Алисы 17-11-2022.odt  алисаСтатусы.odg  обмен с Алисой.odg
gitversion/: CMakeLists.txt
interfaces/: CMakeLists.txt  baseinterface.cpp  baseinterface.h  baseinterfacethread.cpp  baseinterfacethread.h  baseport.cpp  protocom.cpp  protocomthread.cpp  protocomthread.h  usbhidport.cpp  usbhidport.h  usbhidsettings.h
interfaces/include/interfaces/: connectioncontext.h  connectionmanager.h
interfaces/include/interfaces/conn/: async_connection.h  sync_connection.h
interfaces/include/interfaces/exec/: default_query_executor.h  query_executor_fabric.h
interfaces/include/interfaces/ifaces/: baseinterface.h  usbhidport.h
interfaces/include/interfaces/parsers/: base_response_parser.h  protocom_request_parser.h  protocom_response_parser.h
interfaces/include/interfaces/types/: common_types.h  protocom_types.h  settingstypes.h  usbhidportinfo.h
interfaces/src/: connectioncontext.cpp  connectionmanager.cpp
interfaces/src/conn/: async_connection.cpp  sync_connection.cpp
interfaces/src/exec/: default_query_executor.cpp  query_executor_fabric.cpp
interfaces/src/ifaces/: baseinterface.cpp  usbhidport.cpp
interfaces/src/parsers/: base_response_parser.cpp  protocom_request_parser.cpp  protocom_response_parser.cpp
package/src/: settings.ini
package/src/avm-alise/: settings.ini
package/src/avm-alise-stm/: settings.ini
package/src/avm-alise-stm/deb-scripts/: conffiles  postinst  postrm
package/src/avm-alise-stm/debian/: changelog  control.in
package/src/avm-alise-stm/service/: alise.service  avm-alise.service
package/src/avm-alise/deb-scripts/: conffiles  postinst  postrm  prerm
package/src/avm-alise/debian/: changelog
package/src/booter/: settings.ini
package/src/deb-scripts/: postinst.in
package/src/debian/: changelog  control  control.in
protos/: CMakeLists.txt  protos.proto
protos/cmake/: ProtobufGenerateWrapper.cmake
scripts/: alise.service
service/: alise  alise.service
